in Kante Funktionen ergänzt, Routenbeschreibung debuggt